Solve the bug on firefox #5

--- a/docs/style.scss
+++ b/docs/style.scss
@@ -78,8 +78,11 @@
       height: var(--footer-height);
       justify-content:center;
       text-align: center;
-      img {
-       height: 80%;
+      a {
+       height: 100%;
+       img {
+        height: 80%;
+       }
       }
      }
     }
